# Trakines

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  about.md  mod.json
.github/workflows/: build.yml
src/: Config.hpp  LayoutMode.cpp  LayoutMode.hpp  RenderManager.cpp  RenderManager.hpp  SpoutSender.cpp  SpoutSender.hpp  main.cpp
